--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div class="hero-text fade-in-left">
                     <h1 class="hero-title">
                         Hi, I'm<br>
-                        Rith Seyhak
+                        <span class="gradient-name">Rith Seyhak</span>
                     </h1>
                     <p class="hero-subtitle">
                         and I'm a <span class="typing-text" id="typingText"></span><span class="cursor">|</span>
@@ -106,6 +106,20 @@
                     <div class="hero-cta fade-in-up">
                         <a href="#contact" class="btn btn-primary">Get In Touch</a>
                         <a href="#portfolio" class="btn btn-secondary">View Work</a>
+                    </div>
+                    <div class="hero-social fade-in-up">
+                        <a href="https://facebook.com/rithseyhak" target="_blank" rel="noopener noreferrer" class="social-icon facebook" title="Facebook">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                        <a href="https://instagram.com/rithseyhak" target="_blank" rel="noopener noreferrer" class="social-icon instagram" title="Instagram">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a href="https://linkedin.com/in/rithseyhak" target="_blank" rel="noopener noreferrer" class="social-icon linkedin" title="LinkedIn">
+                            <i class="fab fa-linkedin-in"></i>
+                        </a>
+                        <a href="https://github.com/rithseyhak" target="_blank" rel="noopener noreferrer" class="social-icon github" title="GitHub">
+                            <i class="fab fa-github"></i>
+                        </a>
                     </div>
                 </div>
                 <div class="hero-visual fade-in-right">
