Added link redirect

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <a href="https://linkedin.com/in/rithseyhak" target="_blank" rel="noopener noreferrer" class="social-icon linkedin" title="LinkedIn">
                             <i class="fab fa-linkedin-in"></i>
                         </a>
-                        <a href="https://github.com/rithseyhak" target="_blank" rel="noopener noreferrer" class="social-icon github" title="GitHub">
+                        <a href="https://github.com/KMernDabest" target="_blank" rel="noopener noreferrer" class="social-icon github" title="GitHub">
                             <i class="fab fa-github"></i>
                         </a>
                     </div>
@@ -268,7 +268,7 @@
                                 <p>Full-stack web application built with React and Node.js</p>
                                 <div class="portfolio-links">
                                     <a href="#" class="btn-icon" aria-label="View E-commerce Platform live" title="View Project"><i class="fas fa-external-link-alt"></i></a>
-                                    <a href="#" class="btn-icon" aria-label="View E-commerce Platform source code" title="View Code"><i class="fab fa-github"></i></a>
+                                    <a href="https://github.com/KMernDabest" target="_blank" rel="noopener noreferrer" class="btn-icon" aria-label="View E-commerce Platform source code" title="View Code"><i class="fab fa-github"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -283,7 +283,7 @@
                                 <p>React Native mobile application with real-time sync</p>
                                 <div class="portfolio-links">
                                     <a href="#" class="btn-icon" aria-label="View Task Management App live" title="View Project"><i class="fas fa-external-link-alt"></i></a>
-                                    <a href="#" class="btn-icon" aria-label="View Task Management App source code" title="View Code"><i class="fab fa-github"></i></a>
+                                    <a href="https://github.com/KMernDabest" target="_blank" rel="noopener noreferrer" class="btn-icon" aria-label="View Task Management App source code" title="View Code"><i class="fab fa-github"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -298,7 +298,7 @@
                                 <p>Interactive weather application with data visualization</p>
                                 <div class="portfolio-links">
                                     <a href="#" class="btn-icon" aria-label="View Weather Dashboard live" title="View Project"><i class="fas fa-external-link-alt"></i></a>
-                                    <a href="#" class="btn-icon" aria-label="View Weather Dashboard source code" title="View Code"><i class="fab fa-github"></i></a>
+                                    <a href="https://github.com/KMernDabest" target="_blank" rel="noopener noreferrer" class="btn-icon" aria-label="View Weather Dashboard source code" title="View Code"><i class="fab fa-github"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -523,7 +523,7 @@
                     <div class="footer-section">
                         <h4>Follow Me</h4>
                         <div class="social-links">
-                            <a href="#" class="social-link" aria-label="Follow on GitHub" title="GitHub"><i class="fab fa-github"></i></a>
+                            <a href="https://github.com/KMernDabest" target="_blank" rel="noopener noreferrer" class="social-link" aria-label="Follow on GitHub" title="GitHub"><i class="fab fa-github"></i></a>
                             <a href="#" class="social-link" aria-label="Connect on LinkedIn" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
                             <a href="#" class="social-link" aria-label="Follow on Twitter" title="Twitter"><i class="fab fa-twitter"></i></a>
                             <a href="#" class="social-link" aria-label="Follow on Instagram" title="Instagram"><i class="fab fa-instagram"></i></a>
